# Chatbot_Embedding_Tools

./: README.md  app.py  pyproject.toml
chat_tool/query/: chatgpt.py
static/js/: ycm_chat_icon.js
templates/: index.html
templates/chat_bot/: chat_icon.html
